examples/boogie/tfe/negativetests/badMap.bpl
/*
  This tests typesafety of map arguments.
*/

var x:[]bool where x[1] == true;
